@@ -35,7 +35,9 @@
             </div-->
             
             <!--edit-->
-            <textarea id="cat" class="cat"></textarea>
+            <!--textarea id="cat" class="cat"></textarea-->
+
+            <p id="codeEditor"><textarea id='lineCounter' wrap='off' readonly>1.</textarea><textarea id='cat' wrap='off'></textarea></p>
 
             <div id="settings" class="settings">
                 <div class="holder">
